--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,7 +4,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/vendor/assets/font
 @import "../bower_components/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap.scss";
 // endbower
 
-@import url(http://fonts.googleapis.com/css?family=Oswald:300,700|Open+Sans+Condensed:300|Bitter:400,700);
+@import url(http://fonts.googleapis.com/css?family=Oswald:300,700|Raleway);
 
 .browsehappy {
     margin: 0.2em 0;
@@ -13,17 +13,33 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/vendor/assets/font
     padding: 0.2em 0;
 }
 
-$nupurple : rgb(69,29,82);
+$nupurple : lighten(rgb(69,29,82), 12%);
 
 .transparent {
   opacity: 0;
+}
+
+#video-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: white;
+  z-index: 999;
 }
 
 hr {
   @extend .row;
   border-color: $nupurple;
   border-width: 10px 0 0 0;
-  margin-bottom: 0;
+  margin: 0 -15px;
+}
+
+header {
+  padding-top: 50px;
+  background: url('../images/unsplash-cafe.jpg');
+  background-size: cover;
+  background-position: 50% 50%;
+  color: white;
 }
 
 header i {
@@ -33,24 +49,38 @@ header i {
   @extend .col-md-offset-4;
   text-align: center;
   animation-iteration-count: infinite;
+  color: $nupurple;
 }
 
 section.ideas {
-  background: url('../images/ideas.jpg');
+  background: url('../images/unsplash-phone.jpg');
   background-size: cover;
-  background-position: center 60%;
+  background-position: center center;
+}
+
+h1.logotype {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size: 60pt;
+  outline: 1px black;
+  padding: 50px 100px;
+  text-shadow: -1px 1px gray,
+               -1px -1px gray,
+                1px 1px gray,
+                1px -1px gray;
 }
 
 h1.bitter {
-  font-family: 'Oswald', serif;
+  font-family: 'Oswald', sans-serif;
   font-weight: 700;
   text-transform: uppercase;
+  text-align: right;
   font-size: 100pt;
-  text-shadow: -3px 3px gray,
-               3px -3px gray,
-               3px 3px gray,
-               -3px -3px gray;
-  margin: 0;
+  text-shadow: -2px 2px gray,
+               2px -2px gray,
+               2px 2px gray,
+               -2px -2px gray;
+  margin: 0 75px 0 0;
   color: white;
 }
 
@@ -66,13 +96,13 @@ section {
   @extend .col-sm-4;
   @extend .col-xs-12;
   text-align: center;
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 60pt;
   font-weight: 700;
   @media all and (min-width: 1200px) {
     font-size: 75pt;
   }
-  text-shadow: 3px 3px darken($nupurple, 10%)
+  /*text-shadow: 3px 3px darken($nupurple, 10%)
             ,  4px 4px darken($nupurple, 9%)
             ,  5px 5px darken($nupurple, 8%)
             ,  6px 6px darken($nupurple, 7%)
@@ -94,7 +124,7 @@ section {
             ,  22px 22px darken($nupurple, 1.6%)
             ,  23px 23px darken($nupurple, 1.4%)
             ,  24px 24px darken($nupurple, 1.2%)
-            ,  25px 25px darken($nupurple, 1%);
+            ,  25px 25px darken($nupurple, 1%);*/
   color: white;
   text-transform: uppercase;
   padding: 50px 0;
@@ -109,31 +139,39 @@ section {
 }
 
 .track-section {
-  h1 { font-size: 70pt; }
-  font-family: 'Oswald', sans-serif;
+  h1 { 
+    font-size: 70pt;
+  }
+  font-family: 'Raleway', sans-serif;
+  font-size: 60pt;
   
   .track {
-    font-size: 40pt;
+    @extend .col-xs-12;
     margin-top: 80px;
-    font-weight: 300;
+  }
+  
+  .track h2 {
+    @extend .col-xs-10;
+    font-size: 30pt;
+  }
     
-    i {
-      float: right;
-      &.fa-leaf {
-        color: lighten(green, 10%);
-      }
-      &.fa-group {
-        color: rgb(58, 58, 193);
-      }
-      &.fa-heart {
-        color: rgb(214, 60, 60);
-      }
-      &.fa-briefcase {
-        color: darken(brown, 10%);
-      }
-      &.fa-flask {
-        color: rgb(239, 144, 16);
-      }
+  i {
+    @extend .col-xs-2;
+    font-size: 40pt;
+    &.fa-leaf {
+      color: lighten(green, 10%);
+    }
+    &.fa-group {
+      color: rgb(58, 58, 193);
+    }
+    &.fa-heart {
+      color: rgb(214, 60, 60);
+    }
+    &.fa-briefcase {
+      color: darken(brown, 10%);
+    }
+    &.fa-flask {
+      color: rgb(239, 144, 16);
     }
   }
 }
@@ -144,7 +182,8 @@ footer {
   display: inline-table;
   vertical-align: middle;
   height: 300px;
-  padding: 0 5%;
+  padding: 5%;
+  
   img {
     width: 100%;
   }
@@ -152,5 +191,17 @@ footer {
     width: 30%;
     display: table-cell;
     vertical-align: middle;
+  }
+}
+
+  
+@media all and (max-width: 850px) {
+  footer {
+    padding: 15%;
+    .kellogg, .farley, .epic {
+      margin-left: 20%;
+      width: 60%;
+      display: block;
+    }
   }
 }
